--- a/nocodetechnicalrpt.ipynb
+++ b/nocodetechnicalrpt.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "nocodetechnicalrpt.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOKDwdnuTb6xuW4keskyusI",
+      "authorship_tag": "ABX9TyPg+vh/0Jfrj1MS8tYHtO1P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,8 @@
         "# Conclusion \n",
         "\n",
         "```\n",
-        "# This is formatted as code\n",
+        "# Describe the problem/opportunity \n",
+        "$ Describe how you are going to resolve it. Follow it up with Recommend \n",
         "```\n",
         "\n"
       ]
@@ -91,6 +92,11 @@
       },
       "source": [
         "# Recommend \n",
+        "\n",
+        "```\n",
+        "# Summarise with a few word\n",
+        "\n",
+        "\n",
         "\n",
         "```\n",
         "# This is formatted as code\n",
