--- a/NoCodeLowCodeSolutions.ipynb
+++ b/NoCodeLowCodeSolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NoCodeLowCodeSolutions.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOnk60ewCKgijIqUF8vszip",
+      "authorship_tag": "ABX9TyMyT89rw7ez0qczDaV6xQ/U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,9 +58,11 @@
         "\n",
         "https://developer.apple.com/documentation/createml\n",
         "```\n",
-        "# Create ML\n",
+        "* Create ML\n",
         "Create machine learning models for use in your app.\n",
-        "```\n",
+        "\n",
+        "https://developer.apple.com/documentation/createml/creating_an_image_classifier_model\n",
+        "\n",
         "# GC\n",
         "\n",
         "```\n",
