--- a/NoCodeLowCodeSolutions.ipynb
+++ b/NoCodeLowCodeSolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NoCodeLowCodeSolutions.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMyT89rw7ez0qczDaV6xQ/U",
+      "authorship_tag": "ABX9TyPpIBDcJyiOMeOSOMSohf8F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,16 +63,22 @@
         "\n",
         "https://developer.apple.com/documentation/createml/creating_an_image_classifier_model\n",
         "\n",
-        "# GC\n",
-        "\n",
         "```\n",
-        "# This is formatted as code\n",
-        "```\n",
-        "# Azure\n",
+        "# GCP (Google Cloud)\n",
+        "\n",
+        "* https://cloud.google.com/\n",
+        "\n",
+        "* On Google search for AutoML Tables for analysing data set \n",
+        "\n",
+        "Automatically build and deploy state-of-the-art machine learning models on structured data.\n",
         "\n",
         "\n",
-        "```\n",
-        "# This is formatted as code\n"
+        "# AZURE (Microsoft)\n",
+        "\n",
+        "* ML model in AZURE\n",
+        "*\n",
+        "*\n",
+        "\n"
       ]
     },
     {
@@ -85,8 +91,10 @@
         "# AWS \n",
         "\n",
         "```\n",
-        "# This is formatted as code\n",
-        "```\n",
+        "* AWS Managment Consol - use Amazon Comprehend \n",
+        "* AWS Rekognition \n",
+        "* AWS Machine Learning\n",
+        "* QuickSight\n",
         "\n"
       ]
     },
